objects/EUR_CRM_ObjPromo_Trade_Fair_Participant__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Objectives_Promotions__c</fullName>
        <label>Objectives / Promotions</label>
        <referenceTo>EUR_CRM_ObjPromo__c</referenceTo>
        <relationshipLabel>O/P Trade Fair Participants</relationshipLabel>
        <relationshipName>O_P_Participants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Participant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>O_P_Trade_Fair_Participants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sales_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>O_P_Trade_Fair_Participants1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>O/P Trade Fair Participant (EU)</label>
    <nameField>
        <displayFormat>OPTFP - {0000000000}</displayFormat>
        <label>O/P Trade Fair Participant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>O/P Trade Fair Participants (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_DE_ObjPromo_Trade_Fair_Participant</fullName>
        <active>true</active>
        <label>DE O/P Trade Fair Participant</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>